<resources>
    <string name="app_name" translatable="false">Playlist maker</string>
    <string name="app_button_search">Поиск</string>
    <string name="app_button_library">Медиатека</string>
    <string name="app_button_settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="write_to_support">Написать в поддержку</string>
    <string name="agreement">Пользовательское соглашение</string>
    <string name="icons_alt">Иконка.</string>
    <string name="clear_btn_alt">Кнопка очистки.</string>
    <string name="search_page">Поиск</string>
    <string name="library_page">Это страница Медиатеки</string>
    <string name="practicum_link" translatable="false">https://practicum.yandex.ru/android-developer/</string>
    <string name="agreement_link" translatable="false">https://yandex.ru/legal/practicum_offer/</string>
    <string name="email_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="email_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
</resources>