<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3772E7"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    android:paddingTop="14dp"
    android:paddingBottom="28dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="#FFF"
        android:textSize="22sp"
        android:layout_marginBottom="40dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:backgroundTint="#FFF"
        android:text="@string/app_button_search"
        android:textAllCaps="false"
        android:textColor="#1A1B22"
        android:textSize="@dimen/text_size_primary"
        android:padding="0dp"
        app:cornerRadius="@dimen/corner_radius_size_primary"
        app:icon="@drawable/ic_search_icon"
        app:iconGravity="textStart"
        app:iconPadding="10dp"
        app:iconTint="@color/black" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:backgroundTint="#FFF"
        android:text="@string/app_button_library"
        android:textAllCaps="false"
        android:textColor="#1A1B22"
        android:textSize="@dimen/text_size_primary"
        android:padding="0dp"
        app:cornerRadius="@dimen/corner_radius_size_primary"
        app:icon="@drawable/ic_library_icon"
        app:iconGravity="textStart"
        app:iconPadding="10dp"
        app:iconTint="@color/black" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:backgroundTint="#FFF"
        android:text="@string/app_button_settings"
        android:textAllCaps="false"
        android:textColor="#1A1B22"
        android:textSize="@dimen/text_size_primary"
        app:cornerRadius="@dimen/corner_radius_size_primary"
        app:icon="@drawable/ic_settings_icon"
        app:iconGravity="textStart"
        app:iconPadding="10dp"
        app:iconTint="@color/black" />
</LinearLayout>