<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingEnd="12dp"
    android:paddingTop="14dp"
    android:paddingBottom="28dp">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:textColor="@color/text_color_black"
            android:textSize="@dimen/text_size_primary"
            android:text="@string/app_button_settings"
            android:minHeight="0dp"
            android:padding="0dp"
            android:layout_marginBottom="40dp"
            android:textAllCaps="false"
            app:icon="@drawable/ic_arrow_back_icon"
            app:iconGravity="textStart"
            app:iconPadding="28dp"
            app:iconTint="@color/black"
            style="@style/Widget.AppCompat.Button.Borderless"
            />
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="21dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dark_theme"
            android:textFontWeight="400"
            android:textSize="@dimen/text_size_settings"
            android:textColor="@color/black"
            android:layout_gravity="start"
            />
        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            />
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="21dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share_app"
            android:textFontWeight="400"
            android:textSize="@dimen/text_size_settings"
            android:textColor="@color/black"
            android:layout_gravity="start"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_share_icon"
            android:layout_gravity="end"
            android:contentDescription="@string/icons_alt"
            />
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="21dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/write_to_support"
            android:textFontWeight="400"
            android:textSize="@dimen/text_size_settings"
            android:textColor="@color/black"
            android:layout_gravity="start"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_support_icon"
            android:layout_gravity="end"
            android:contentDescription="@string/icons_alt"
            />
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="21dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/agreement"
            android:textFontWeight="400"
            android:textSize="@dimen/text_size_settings"
            android:textColor="@color/black"
            android:layout_gravity="start"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_agreement_icon"
            android:layout_gravity="end"
            android:contentDescription="@string/icons_alt"
            />
    </FrameLayout>

</LinearLayout>